--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "portifolio-next",
+  "name": "portifolio",
   "version": "0.1.0",
   "private": true,
   "scripts": {
@@ -9,7 +9,8 @@
     "lint": "next lint"
   },
   "dependencies": {
-    "next": "^15.3.2",
+    "lucide-react": "^0.511.0",
+    "next": "15.3.2",
     "postcss": "^8.5.3",
     "react": "^19.0.0",
     "react-dom": "^19.0.0"
