--- a/package.json
+++ b/package.json
@@ -25,5 +25,11 @@
     "eslint-config-next": "15.3.2",
     "tailwindcss": "^4.1.7",
     "typescript": "^5"
-  }
+  },
+  "browserslist": [
+    "defaults",
+    "not IE 11",
+    "not dead",
+    ">0.2%"
+  ]
 }
